0.24.0 (unreleased)
-------------------
 - Don't fail the parsing of responses if an xsi:type references an non-existing
   type. Instead log a message (#273)
 - Fix serializing etree.Element instances in the helpers.serialize function
   (#255)

0.23.0 (2016-11-24)
-------------------
 - Add Client.set_default_soapheaders() to set soapheaders which are to be used
   on all operations done via the client object.
 - Add basic support for asyncio using aiohttp. Many thanks to chrisimcevoy
   for the initial implementation! Please see 
   https://github.com/mvantellingen/python-zeep/pull/207 and
   https://github.com/mvantellingen/python-zeep/pull/251 for more information
 - Fix recursion error when generating the call signature (jaceksnet, #264)


0.22.1 (2016-11-22)
-------------------
 - Fix reversed() error (jaceksnet) (#260)
 - Better error message when unexpected xml elements are encountered in 
   sequences.


0.22.0 (2016-11-13)
-------------------
 - Force the soap:address / http:address to HTTPS when the wsdl is loaded from
   a https url (#228)
 - Improvements to the xsd:union handling. The matching base class is now used
   for serializing/deserializing the values. If there is no matching base class 
   then the raw value is returned. (#195)
 - Fix handling of xsd:any with maxOccurs > 1 in xsd:choice elements (#253)
 - Add workaround for schema's importing the xsd from 
   http://www.w3.org/XML/1998/namespace (#220)
 - Add new Client.type_factory(namespace) method which returns a factory to
   simplify creation of types. 



0.21.0 (2016-11-02)
-------------------
 - Don't error on empty xml namespaces declarations in inline schema's (#186)
 - Wrap importing of sqlite3 in try..except for Google App Engine (#243)
 - Don't use pkg_resources to determine the zeep version, use __version__ 
   instead (#243).
 - Fix SOAP arrays by wrapping children in the appropriate element 
   (joeribekker, #236)